new functions(activated email, reset password, show test)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=admstudio.studio@gmail.com
+spring.mail.password=Nv7d=?&M6y^q[wHa
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
