--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.mail.host=smtp.gmail.com
+spring.mail.default-encoding=UTF-8
 spring.mail.port=587
 spring.mail.username=admstudio.studio@gmail.com
 spring.mail.password=Nv7d=?&M6y^q[wHa
